- Add color selection to the graph editing dialog and improve
  the mechanism for selecting a graph font (only applies if 
  gnuplot has the "new" PNG driver, i.e. gnuplot 3.8)
- minor fixes to the build process
- updates to gtk-1.2 GUI (make more consistent with the gtk-2.0 
  version)
- Allow for renaming of saved session models and graphs in gtk2
  version of program

10/31/2003 version 1.1.6
- Test release for Fedora (Linux) packaging

10/24/2003 version 1.1.5
- Updates to manual
- Gtk2 version: Make selection dialog tall enough for wls,
  tsls and ar model selections
- Model window, graph menu: if there are two independent vars,
  offer the option of a 3D fitted/actual plot
- Set sample range: in this dialog, give as default the current
  sample range, not the full data range
- When a session uses data imported from a database, be smarter
  on saving the session: ensure the script includes a command
  to open a datafile (get this saved first if need be)
- Database browser window: close this when a database is
  selected
- GUI model windows: allow drawing of graphs relating to model
  data, even if the sample has been changed since the model
  was estimated
- Model table: make a LaTeX preview available
- Windows installation: fix typo in name of uninstaller program 
  in the Programs menu
- Windows version: bug fixes and enhancements for gretl_updater,
  and add a simple logging mechanism to aid in trouble-shooting
- Windows: add the ability to print a gnuplot graph directly
- ols command: add '-q' (quiet) option to suppress printing of 
  results (and add notice of this to gretlcli.hlp)
- Consolidate "webget" code -- one version for all uses
- gtk2 version: replace "system()" calls with g_spawn()
- Add model selection statistics to output of adf command
- Improve recognition of dated data when importing from Excel
  or Gnumeric
- Add an error message for an attempt to run TRAMO when the
  sample size is > 600