@@ -39,6 +39,9 @@ version 1.2.0
   version)
 - Allow for renaming of saved session models and graphs in gtk2
   version of program
+- Add a "lite" version of gtksourceview to the gtk2 source package
+- Add recognition of dated daily data in importing from ASCII:
+  dates must be like 89/12/31, i.e. YY/MM/DD
 
 10/31/2003 version 1.1.6
 - Test release for Fedora (Linux) packaging
